# CV_HW2

./: .gitignore  README.md  main.py  pyproject.toml  report.md
.github/workflows/: submit.yml
doc/: cv2026_hw2.md  cv2026_hw2_meta.json
p1/: p1.py  utils.py
p2/: .gitignore  config.py  dataset.py  download.sh  model.py  p2_inference.py  p2_run_train.sh  p2_train.py
